--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+aiogram==2.25.2
+aiohttp==3.8.6
+aiosignal==1.3.1
 anyio==3.7.1
 asgiref==3.7.2
+async-timeout==4.0.3
+asynctest==0.13.0
 attrs==23.2.0
+Babel==2.9.1
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.2.2
@@ -8,17 +15,24 @@ cffi==1.15.1
 charset-normalizer==3.3.2
 Django==3.2.25
 djangorestframework==3.15.1
+drf-yasg==1.21.7
 exceptiongroup==1.2.1
+frozenlist==1.3.3
 h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
 idna==3.7
 importlib-metadata==6.7.0
+inflection==0.5.1
+magic-filter==1.0.12
+multidict==6.0.5
 outcome==1.3.0.post0
+packaging==24.0
 pycparser==2.21
 PySocks==1.7.1
 python-telegram-bot==20.3
 pytz==2024.1
+PyYAML==6.0.1
 requests==2.31.0
 selenium==4.11.2
 sniffio==1.3.1
@@ -29,6 +43,8 @@ telegram==0.0.1
 trio==0.22.2
 trio-websocket==0.11.1
 typing_extensions==4.7.1
+uritemplate==4.1.1
 urllib3==2.0.7
 wsproto==1.2.0
+yarl==1.9.4
 zipp==3.15.0
